--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -11,7 +11,10 @@
   },
   "dependencies": {
     "axios": "^1.7.9",
+    "date-fns": "^4.1.0",
     "react": "^18.3.1",
+    "react-calendar": "^5.1.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.0.2"
   },
