--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -16,6 +16,7 @@
     "react-calendar": "^5.1.0",
     "react-datepicker": "^7.6.0",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.4.0",
     "react-router-dom": "^7.0.2",
     "react-transition-group": "^4.4.5"
   },
