--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.5.0",
     "react": "^18.3.1",
     "react-calendar": "^5.1.0",
     "react-datepicker": "^7.6.0",
