--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,7 +14,10 @@
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "mysql2": "^3.11.5"
+    "fs-extra": "^11.3.0",
+    "multer": "^2.0.0",
+    "mysql2": "^3.11.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
